# c-_for_cv

./: .gitignore  README.md
build_and_tools/compilation/: main  main.cpp  main.i  main.s
homeworks/hw1/: troubleshoot.txt
homeworks/hw1/task_1/: comands.sh
homeworks/hw1/task_2/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists_t2_ex2.txt  build.sh
homeworks/hw1/task_2/src/: subtract.cpp
homeworks/hw2/task_1/: CMakeLists.txt
homeworks/hw2/task_1/src/: main.cpp
homeworks/hw2/task_2/: CMakeLists.txt
homeworks/hw2/task_2/src/: main.cpp
homeworks/hw3/: CMakeLists.txt  CMakeLists_test_html_writer.txt
homeworks/hw3/api/: html_writer.cpp  html_writer.hpp  html_writter_lib_test.cpp  image_browser.cpp  main.cpp
homeworks/hw3/help/: a.out  tuple_example.cpp
homeworks/hw3/web_app/: html_writer_test.html  web_app.html
homeworks/hw4/: CMakeLists.txt
homeworks/hw4/src/: ipb_vector.cpp  main.cpp
